--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "website",
+  "name": "tikitaka360_backend",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
+  },
+  "engines": {
+    "node": ">=20.0"
   },
   "dependencies": {
     "@algorandfoundation/algokit-utils": "^6.0.2",
